@@ -256,6 +256,14 @@ input#openid_url {
 	padding-left: 18px;
 }
 
+input#searchbox {
+	background: url(wikiicons/search-bg.gif) no-repeat;
+	background-color: #fff;
+	background-position: 0 50%;
+	color: #000;
+	padding-left: 16px;
+}
+
 /* Things to hide in printouts. */
 @media print {
 	.actions { display: none; }
