@@ -47,4 +47,4 @@ The patch below adds a label for the field to improve usability:
 > to get it to appear higher up is to put it first, or to use Evil absolute
 > positioning. (CSS sucks.) --[[Joey]]
 
-[[wishlist]]
+[[done wishlist]]
