@@ -1,5 +1,5 @@
 <form method="get" action="<TMPL_VAR SEARCHACTION>" id="searchform">
 <div>
-<input type="text" name="P" value="" size="16" />
+<input type="text" id="searchbox" name="P" value="" size="16" />
 </div>
 </form>
