@@ -28,6 +28,7 @@ ikiwiki (2.60) UNRELEASED; urgency=low
   * Options set in the setup file are now immediatly loaded by ikiwiki -setup.
     This allows later switches to override them. Previously, setup file
     options overrode most command line options.
+  * Added a small icon to the search input box.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
